<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    

    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
    tools:context=".fragments.FromBeforeRideFragment"
    android:background="@color/background"
    >

    <include
        android:id="@+id/included_Tap"
        layout="@layout/inner_action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fuelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/medium"
        android:text="@string/fuel"
        android:textColor="@color/info_text_color"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/included_Tap"
        android:layout_marginStart="20dp" />
    <LinearLayout
        android:id="@+id/fuelLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/fuelLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="90"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/fullBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            style="?attr/materialButtonOutlinedStyle"
            android:backgroundTint="@color/selected_buttn_color"
            android:text="@string/full"
            android:layout_marginEnd="5dp"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:fontFamily="@font/medium"
            android:textColor="@color/white"
            app:strokeWidth="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/mediumBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            style="?attr/materialButtonOutlinedStyle"
            android:backgroundTint="@color/white"
            android:text="@string/medium"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/medium"
            app:strokeWidth="0dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/lowBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            style="?attr/materialButtonOutlinedStyle"
            android:backgroundTint="@color/white"
            android:text="@string/low"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/medium"
            app:strokeWidth="0dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/KmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/medium"
        android:text="@string/km"
        android:textColor="@color/info_text_color"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fuelLayout"
        android:layout_marginStart="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@id/KmLabel"
        android:id="@+id/KmEditText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        app:boxStrokeErrorColor="@color/red"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="true"
        android:fontFamily="@font/medium"
        android:hint="1200KM"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/carSpeedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/medium"
        android:text="@string/car_speedometer"
        android:textColor="@color/info_text_color"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/KmEditText"
        android:layout_marginStart="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadPhotoBtn"
        android:layout_marginTop="10dp"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/selected_buttn_color"
        android:fontFamily="@font/medium"
        android:text="@string/upload_photo"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carSpeedLabel"
        app:strokeWidth="0dp" />

    <ImageView

        android:layout_margin="20dp"
        android:id="@+id/selectedImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:src="@drawable/coverimage"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadPhotoBtn" />

    <com.google.android.material.button.MaterialButton
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/sendBtn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/selected_buttn_color"
        android:fontFamily="@font/medium"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedImage"
        app:strokeWidth="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>