<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#E6E7E8"
    app:cardCornerRadius="10dp"
    android:layout_marginBottom="20dp"
    android:layoutDirection="ltr"
    app:cardElevation="0dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        >
        <TextView
            android:id="@+id/trip_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/info_text_color"
            android:textSize="25sp"
            android:text="@string/delivery_trip_completed"
            android:fontFamily="@font/medium"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:id="@+id/viewTripsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/view_info_trips"
            android:textSize="20sp"
            android:fontFamily="@font/regular"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/_12_jan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/red"
            android:fontFamily="@font/medium"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>