<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MyProfileActivity"
>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >
    <include
        android:id="@+id/included_Tap"
        layout="@layout/inner_action_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_margin="25dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/included_Tap" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/uploadPhotoBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        app:layout_constraintEnd_toEndOf="@+id/profileImage"
        android:src="@drawable/upload_img"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/profileImage"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/profileImage"
        app:layout_constraintBottom_toBottomOf="@id/profileImage"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/userNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:fontFamily="@font/semibold"
            />
        <TextView
            android:id="@+id/iDTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_8223427"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/regular"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/boxesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/full_name"
            android:textSize="20sp"
            android:fontFamily="@font/semibold"
            />
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/KmLabel"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            app:boxStrokeErrorColor="@color/red"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintAnimationEnabled="true"
            android:fontFamily="@font/medium"
            app:boxBackgroundColor="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/fullNameEt"
                android:layout_height="60dp"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/mobile_number"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/semibold"
            />
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/KmLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            app:boxStrokeErrorColor="@color/red"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintAnimationEnabled="true"
            android:fontFamily="@font/medium"
            app:boxBackgroundColor="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileNumberET"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/semibold"
            />
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/KmLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            app:boxStrokeErrorColor="@color/red"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintAnimationEnabled="true"
            android:fontFamily="@font/medium"
            app:boxBackgroundColor="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/birthday"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/semibold"
            />
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/KmLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            app:boxStrokeErrorColor="@color/red"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintAnimationEnabled="true"
            android:fontFamily="@font/medium"
            app:boxBackgroundColor="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthDatePicker"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:clickable="false"
                android:focusable="false"
                android:editable="false"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/SaveBtn"
        android:layout_marginTop="20dp"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/selected_buttn_color"
        android:fontFamily="@font/medium"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxesLayout"
        app:strokeWidth="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>